// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature flag screen should render FeatureFlagItem 1`] = `
<View
  testID="feature_future_swap_row"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <Text
      style={
        [
          {},
          [
            {},
            {},
          ],
        ]
      }
    >
      Future swap
    </Text>
    <View
      style={{}}
    >
      <RCTSwitch
        accessibilityRole="switch"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onTintColor="#02B31B"
        style={
          [
            {
              "height": 31,
              "width": 51,
            },
            {
              "backgroundColor": "#E5E5E5",
              "borderRadius": 16,
            },
          ]
        }
        testID="feature_future_swap_switch"
        thumbTintColor="#FFFFFF"
        tintColor="#E5E5E5"
        value={true}
      />
    </View>
  </View>
  <Text
    style={
      [
        {},
        [
          {},
          {},
        ],
      ]
    }
  >
    Browse loan tokens provided by DeFiChain
  </Text>
</View>
`;

exports[`feature flag screen should render FeatureFlagScreen 1`] = `
<RCTScrollView
  style={
    [
      undefined,
      {},
    ]
  }
  testID="features_flag_screen"
>
  <View>
    <View
      style={{}}
    >
      <Text
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Light Wallet beta features are in the user acceptance testing phase. Using beta feature(s) is encouraged, but caution is advised when using your assets.
      </Text>
    </View>
    <View
      testID="feature_future_swap_row"
    >
      <View
        style={
          [
            {},
            {},
          ]
        }
      >
        <Text
          style={
            [
              {},
              [
                {},
                {},
              ],
            ]
          }
        >
          Future swap
        </Text>
        <View
          style={{}}
        >
          <RCTSwitch
            accessibilityRole="switch"
            onChange={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onTintColor="#02B31B"
            style={
              [
                {
                  "height": 31,
                  "width": 51,
                },
                {
                  "backgroundColor": "#E5E5E5",
                  "borderRadius": 16,
                },
              ]
            }
            testID="feature_future_swap_switch"
            thumbTintColor="#FFFFFF"
            tintColor="#E5E5E5"
            value={true}
          />
        </View>
      </View>
      <Text
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Browse loan tokens provided by DeFiChain
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
